testsuite/tests/grammar/invalid_rule_dup/test.out
== test.lkt ==
test.lkt:7:5: error: rule names must be unique
7 |     sec_rule <- ExampleNode("example")
  |     ^^^^^^^^


lkt_compile: Done
